# unofficial-windows-message-center-rss

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html
.github/: convert_into_rss.yml
.github/workflows/: build.yml  convert_into_rss.yml
feed/: atom10.xml
src/: article.rs  feed.rs  main.rs  parser.rs
