[package]
name = "unofficial-windows-message-center-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17.1"
chrono = "0.4"
chrono-tz = "0.8.3"
html-escape = "0.2.11"

[dev-dependencies]
regex = "1.9.3"
