[package]
name = "unofficial-windows-message-center-rss"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
scraper = "0.24.0"
chrono = "0.4"
chrono-tz = "0.10.4"
html-escape = "0.2.11"

[dev-dependencies]
regex = "1.11.2"
